ADD README and switch DB to mongo

--- a/parse/templates/index.html
+++ b/parse/templates/index.html
@@ -27,12 +27,12 @@
                         </label>
                     </div>
                     <div id="save" class="toolitem">
-                        <label>收藏:</label>
                         <button class="btn btn-primary btn-xs">Save</button>
                     </div>
                     <div id="save" class="toolitem">
-                        <button class="btn btn-link">个人主页</button>
+                        <a href="#" class="toolitem">个人主页</a>
                     </div>
+                    
                 </div>
                 <button id = "trigger" class = "btn btn-default" data-toggle="collapse" data-target="#tools"><span class="glyphicon glyphicon-wrench"></span></button>
             </div>
